Update PRC2.md